chore: Update TODO

--- a/backend/TODO
+++ b/backend/TODO
@@ -1,1 +1,2 @@
-☐ Add verification flag to user model.
+✔ Add verification flag to user model. @done(24-06-29 13:39)
+☐ Implement standardisation of responses.
