feat: Put external providers into one place.

--- a/backend/TODO
+++ b/backend/TODO
@@ -2,7 +2,8 @@ Now:
     ✔ Add verification flag to user model. @done(24-06-29 13:39)
     ✔ Implement standardisation of responses. @done(24-07-02 14:34)
     ✔ Add user decorator. @done(24-07-02 19:57)
-    ☐ Create account resource.
+    ✔ Create account resource. @done(24-07-03 11:16)
+    ☐ Implement account resource.
 
 Later:
     ☐ Add validation and confirm password matching to password.
@@ -10,3 +11,5 @@ Later:
     ☐ Implement testing framework.
     ☐ Implement a response interceptor.
     ☐ Implement a logger service to logging invalid responses (i.e. responses not of type ResponseDTO).
+    ☐ Look into how banks ensure security of sensitive information.
+    ☐ Decide on commenting and return types strategy.
