feat: Implement response interceptor.

--- a/backend/TODO
+++ b/backend/TODO
@@ -1,15 +1,15 @@
-Now:
+Done:
     ✔ Add verification flag to user model. @done(24-06-29 13:39)
-    ✔ Implement standardisation of responses. @done(24-07-02 14:34)
     ✔ Add user decorator. @done(24-07-02 19:57)
+    ✔ Implement standardisation of responses. @done(24-07-02 14:34)
     ✔ Create account resource. @done(24-07-03 11:16)
-    ☐ Implement account resource.
+    ✔ Implement a response interceptor. @done(24-07-03 19:28)
 
-Later:
+ToDo:
+    ☐ Implement account resource.
     ☐ Add validation and confirm password matching to password.
     ☐ Abstract OTP generation so it is applicable easily to the resetting of password.
     ☐ Implement testing framework.
-    ☐ Implement a response interceptor.
     ☐ Implement a logger service to logging invalid responses (i.e. responses not of type ResponseDTO).
     ☐ Look into how banks ensure security of sensitive information.
     ☐ Decide on commenting and return types strategy.
